--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "academy-react-starter",
+  "name": "corpsquad-dashboard",
   "version": "0.1.0",
   "private": true,
   "license": "CC-BY-NC-ND-4.0",
