--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/react-dom": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^4.26.1",
     "@typescript-eslint/parser": "^4.26.1",
+    "cypress": "^9.7.0",
     "eslint": "^7.28.0",
     "eslint-plugin-react": "^7.24.0",
     "prettier": "2.3.1"
